# mlops

./: .gitignore  README.md  evaluate.dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile
data/processed/: test_target.pt  train_target.pt
dockerfiles/: api.dockerfile  train_og.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/mlops_solo_project/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py
